--- a/app/src/main/res/layout/activity_review_detail.xml
+++ b/app/src/main/res/layout/activity_review_detail.xml
@@ -24,6 +24,16 @@
                 android:elevation="0dp"
                 app:elevation="0dp">
 
+                <ImageView
+                    android:id="@+id/iv_go_back"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_back_dir"
+                    app:tint="@color/sharehands_black"
+                    android:layout_marginStart="16dp"
+                    android:padding="10dp"
+                    />
+
                 <TextView
                     android:id="@+id/tv_review_title"
                     android:layout_width="wrap_content"
@@ -39,180 +49,205 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/layout_review_stat"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginTop="24dp"
-                android:background="@drawable/view_review_stat">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                >
 
-                <TextView
-                    android:id="@+id/tv_service_title"
-                    android:layout_width="wrap_content"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/layout_review_stat"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    tools:text="봉사 제목"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:textSize="24sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/sharehands_black"
-                    android:layout_marginTop="28dp"
-                    android:layout_marginStart="28dp"
-                    />
-
-                <TextView
-                    android:id="@+id/tv_user_num_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="작성자 수"
-                    app:layout_constraintTop_toBottomOf="@id/tv_service_title"
-                    app:layout_constraintStart_toStartOf="@id/tv_service_title"
-                    android:layout_marginTop="16dp"
-                    android:textColor="@color/sharehands_black"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    />
-
-                <TextView
-                    android:id="@+id/tv_user_rating_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="평점"
-                    app:layout_constraintTop_toBottomOf="@id/tv_user_num_title"
-                    app:layout_constraintStart_toStartOf="@id/tv_service_title"
-                    android:layout_marginTop="12dp"
-                    android:textColor="@color/sharehands_black"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    />
-
-                <TextView
-                    android:id="@+id/tv_user_sum_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="요약"
-                    app:layout_constraintTop_toBottomOf="@id/tv_user_rating_title"
-                    app:layout_constraintStart_toStartOf="@id/tv_service_title"
-                    android:layout_marginTop="12dp"
-                    android:textColor="@color/sharehands_black"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    />
-
-                <TextView
-                    android:id="@+id/tv_user_num_content"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintStart_toEndOf="@id/tv_user_num_title"
-                    app:layout_constraintTop_toTopOf="@id/tv_user_num_title"
-                    app:layout_constraintBottom_toBottomOf="@id/tv_user_num_title"
+                    app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginStart="20dp"
-                    tools:text="10명"
-                    android:textSize="16sp"
-                    android:textColor="@color/black" />
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginTop="24dp"
+                    android:background="@drawable/view_review_stat">
 
-                <TextView
-                    android:id="@+id/tv_user_rating_num"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="@id/tv_user_num_content"
-                    app:layout_constraintTop_toTopOf="@id/tv_user_rating_title"
-                    app:layout_constraintBottom_toBottomOf="@id/tv_user_rating_title"
-                    tools:text="4.0"
-                    android:textSize="16sp"
-                    android:textColor="@color/sharehands_black"/>
+                    <TextView
+                        android:id="@+id/tv_service_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="봉사 제목"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:textSize="24sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/sharehands_black"
+                        android:layout_marginTop="28dp"
+                        android:layout_marginStart="28dp"
+                        />
 
-                <TextView
-                    android:id="@+id/tv_user_rating_achievement"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="@id/tv_user_num_content"
-                    app:layout_constraintTop_toTopOf="@id/tv_user_sum_title"
-                    app:layout_constraintBottom_toBottomOf="@id/tv_user_sum_title"
-                    android:text="성취감"
-                    android:textStyle="bold"
-                    android:textSize="16sp"
-                    android:textColor="#777777"/>
+                    <TextView
+                        android:id="@+id/tv_user_num_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="작성자 수"
+                        app:layout_constraintTop_toBottomOf="@id/tv_service_title"
+                        app:layout_constraintStart_toStartOf="@id/tv_service_title"
+                        android:layout_marginTop="16dp"
+                        android:textColor="@color/sharehands_black"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        />
 
-                <TextView
-                    android:id="@+id/tv_user_rating_traffic"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="@id/tv_user_rating_achievement"
-                    app:layout_constraintTop_toBottomOf="@id/tv_user_rating_achievement"
-                    android:text="교통편"
-                    android:textStyle="bold"
-                    android:textSize="16sp"
-                    android:textColor="#777777"
-                    android:layout_marginTop="12dp"/>
+                    <TextView
+                        android:id="@+id/tv_user_rating_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="평점"
+                        app:layout_constraintTop_toBottomOf="@id/tv_user_num_title"
+                        app:layout_constraintStart_toStartOf="@id/tv_service_title"
+                        android:layout_marginTop="12dp"
+                        android:textColor="@color/sharehands_black"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        />
 
-                <TextView
-                    android:id="@+id/tv_user_rating_system"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="@id/tv_user_rating_achievement"
-                    app:layout_constraintTop_toBottomOf="@id/tv_user_rating_traffic"
-                    android:text="활동의 체계"
-                    android:textStyle="bold"
-                    android:textSize="16sp"
-                    android:textColor="#777777"
-                    android:layout_marginTop="12dp"
+                    <TextView
+                        android:id="@+id/tv_user_sum_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="요약"
+                        app:layout_constraintTop_toBottomOf="@id/tv_user_rating_title"
+                        app:layout_constraintStart_toStartOf="@id/tv_service_title"
+                        android:layout_marginTop="12dp"
+                        android:textColor="@color/sharehands_black"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        />
+
+                    <TextView
+                        android:id="@+id/tv_user_num_content"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintStart_toEndOf="@id/tv_user_num_title"
+                        app:layout_constraintTop_toTopOf="@id/tv_user_num_title"
+                        app:layout_constraintBottom_toBottomOf="@id/tv_user_num_title"
+                        android:layout_marginStart="20dp"
+                        tools:text="10명"
+                        android:textSize="16sp"
+                        android:textColor="@color/black" />
+
+                    <TextView
+                        android:id="@+id/tv_user_rating_num"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintStart_toStartOf="@id/tv_user_num_content"
+                        app:layout_constraintTop_toTopOf="@id/tv_user_rating_title"
+                        app:layout_constraintBottom_toBottomOf="@id/tv_user_rating_title"
+                        tools:text="4.0"
+                        android:textSize="16sp"
+                        android:textColor="@color/sharehands_black"/>
+
+                    <TextView
+                        android:id="@+id/tv_user_rating_achievement"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintStart_toStartOf="@id/tv_user_num_content"
+                        app:layout_constraintTop_toTopOf="@id/tv_user_sum_title"
+                        app:layout_constraintBottom_toBottomOf="@id/tv_user_sum_title"
+                        android:text="성취감"
+                        android:textStyle="bold"
+                        android:textSize="16sp"
+                        android:textColor="#777777"/>
+
+                    <TextView
+                        android:id="@+id/tv_user_rating_traffic"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintStart_toStartOf="@id/tv_user_rating_achievement"
+                        app:layout_constraintTop_toBottomOf="@id/tv_user_rating_achievement"
+                        android:text="교통편"
+                        android:textStyle="bold"
+                        android:textSize="16sp"
+                        android:textColor="#777777"
+                        android:layout_marginTop="12dp"/>
+
+                    <TextView
+                        android:id="@+id/tv_user_rating_system"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintStart_toStartOf="@id/tv_user_rating_achievement"
+                        app:layout_constraintTop_toBottomOf="@id/tv_user_rating_traffic"
+                        android:text="활동의 체계"
+                        android:textStyle="bold"
+                        android:textSize="16sp"
+                        android:textColor="#777777"
+                        android:layout_marginTop="12dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_marginBottom="28dp"/>
+
+                    <RatingBar
+                        android:id="@+id/rating_average"
+                        android:layout_width="120dp"
+                        android:rating="@{}"
+                        android:stepSize="0.5"
+                        android:layout_height="16dp"
+                        android:isIndicator="false"
+                        app:layout_constraintTop_toTopOf="@id/tv_user_rating_title"
+                        app:layout_constraintBottom_toBottomOf="@id/tv_user_rating_title"
+                        app:layout_constraintStart_toEndOf="@id/tv_user_rating_system"
+                        android:layout_marginStart="20dp"
+                        />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <View
+                    android:id="@+id/view_separator"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#DBDBDB"
+                    app:layout_constraintTop_toBottomOf="@id/layout_review_stat"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginEnd="24dp"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_reviews"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    app:layout_constraintTop_toBottomOf="@id/view_separator"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginBottom="28dp"/>
-
-                <RatingBar
-                    android:id="@+id/rating_average"
-                    android:layout_width="120dp"
-                    android:rating="@{}"
-                    android:stepSize="0.5"
-                    android:layout_height="16dp"
-                    android:isIndicator="false"
-                    app:layout_constraintTop_toTopOf="@id/tv_user_rating_title"
-                    app:layout_constraintBottom_toBottomOf="@id/tv_user_rating_title"
-                    app:layout_constraintStart_toEndOf="@id/tv_user_rating_system"
-                    android:layout_marginStart="20dp"
-                    />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_margin="24dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginEnd="24dp"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <View
-                android:id="@+id/view_separator"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#DBDBDB"
-                app:layout_constraintTop_toBottomOf="@id/layout_review_stat"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="24dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="24dp"/>
+            <LinearLayout
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:orientation="horizontal">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_reviews"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintTop_toBottomOf="@id/view_separator"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_margin="24dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="24dp"/>
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/btn_write_service"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_add"
+                    android:background="@color/sharehands_green_strong"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="24dp"
+                    android:layout_marginBottom="24dp"/>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
 
-
+        </RelativeLayout>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
