--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -16,4 +16,5 @@
     <color name="sharehands_gray">#D9D9D9</color>
     <color name="text_color">#FAFAFA</color>
     <color name="item_color">#1F2024</color>
+    <color name="sharehands_red">#FF0000</color>
 </resources>
