--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="sharehands_gray">#D9D9D9</color>
     <color name="text_color">#0E0E0E</color>
     <color name="item_color">#FFFFFF</color>
+    <color name="sharehands_red">#FF0000</color>
 </resources>
