--- a/app/src/main/res/layout/activity_service_write.xml
+++ b/app/src/main/res/layout/activity_service_write.xml
@@ -899,7 +899,7 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toBottomOf="@id/frame_email"
                     android:layout_marginTop="16dp"
-                    android:text="이메일"
+                    android:text="기타 연락망"
                     android:textColor="@color/text_color"
                     android:textSize="12sp"
                     app:layout_constraintStart_toStartOf="@id/tv_photo_title"/>
