[ADD] 소셜 로그인 및 약관동의 레이아웃 추가

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -17,4 +17,5 @@
     <color name="text_color">#FAFAFA</color>
     <color name="item_color">#1F2024</color>
     <color name="sharehands_red">#FF0000</color>
+    <color name="kakao_yellow">#FFFF00</color>
 </resources>
