--- a/app/src/main/res/drawable/rectangle_service_mgt.xml
+++ b/app/src/main/res/drawable/rectangle_service_mgt.xml
@@ -5,7 +5,7 @@
   <!-- Background -->
   <item>
     <shape android:shape="rectangle">
-      <solid android:color="#DADADA"/>
+      <solid android:color="@color/item_color"/>
       <corners android:radius="20dp"/>
       <stroke android:color="@color/sharehands_gray" android:width="2dp"/>
     </shape>
