--- a/app/src/main/res/drawable/rectangle_shadow_rad40.xml
+++ b/app/src/main/res/drawable/rectangle_shadow_rad40.xml
@@ -99,7 +99,7 @@
   <!-- Background -->
   <item>
     <shape android:shape="rectangle">
-      <solid android:color="@android:color/white"/>
+      <solid android:color="@color/item_color"/>
       <corners android:radius="40dp"/>
       <stroke android:color="#717171" android:width="1dp"/>
     </shape>
