--- a/app/src/main/res/layout/item_recommend_service.xml
+++ b/app/src/main/res/layout/item_recommend_service.xml
@@ -9,143 +9,158 @@
 
     <ImageView
         android:id="@+id/iv_recommend_thumbnail"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_width="156dp"
+        android:layout_height="156dp"
         android:background="@drawable/rectangle_service_mgt"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="32dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginBottom="32dp"
         android:layout_marginEnd="32dp"
         android:scaleType="centerCrop"
         android:clipToOutline="true" />
 
     <TextView
         android:id="@+id/tv_recommend_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/iv_recommend_thumbnail"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toTopOf="@id/iv_recommend_thumbnail"
+        app:layout_constraintStart_toEndOf="@id/iv_recommend_thumbnail"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="2dp"
+        android:maxLines="1"
+        android:ellipsize="end"
         tools:text="봉사 제목"
         android:textSize="20sp"
         android:textColor="@color/text_color"
         android:textStyle="bold" />
 
     <ImageView
-        android:id="@+id/iv_recommend_date_time"
+        android:id="@+id/iv_recommend_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_clock"
-        app:tint="@color/sharehands_green_strong"
+        android:src="@drawable/ic_schedule"
+        app:tint="@color/sharehands_green_medium"
         app:layout_constraintTop_toBottomOf="@id/tv_recommend_title"
         app:layout_constraintStart_toStartOf="@id/tv_recommend_title"
         android:layout_marginTop="8dp"
         />
 
     <TextView
-        android:id="@+id/tv_recommend_month_num"
+        android:id="@+id/tv_recommend_start_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/iv_recommend_date_time"
-        app:layout_constraintTop_toTopOf="@id/iv_recommend_date_time"
-        app:layout_constraintBottom_toBottomOf="@id/iv_recommend_date_time"
-        tools:text="3"
+        app:layout_constraintStart_toEndOf="@id/iv_recommend_date"
+        app:layout_constraintTop_toTopOf="@id/iv_recommend_date"
+        tools:text="2022. 01. 01"
         android:textColor="@color/text_color"
-        android:textSize="16sp"
+        android:textSize="14sp"
         android:layout_marginStart="8dp"/>
 
     <TextView
-        android:id="@+id/tv_recommend_month"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/tv_recommend_month_num"
-        app:layout_constraintTop_toTopOf="@id/iv_recommend_date_time"
-        app:layout_constraintBottom_toBottomOf="@id/iv_recommend_date_time"
-        android:text="월"
-        android:textColor="@color/text_color"
-        android:textSize="16sp" />
-
-    <TextView
-        android:id="@+id/tv_recommend_day_num"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/tv_recommend_month"
-        app:layout_constraintTop_toTopOf="@id/iv_recommend_date_time"
-        app:layout_constraintBottom_toBottomOf="@id/iv_recommend_date_time"
-        tools:text="20"
-        android:textColor="@color/text_color"
-        android:textSize="16sp"
-        android:layout_marginStart="4dp"/>
-
-    <TextView
-        android:id="@+id/tv_recommend_day"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/tv_recommend_day_num"
-        app:layout_constraintTop_toTopOf="@id/iv_recommend_date_time"
-        app:layout_constraintBottom_toBottomOf="@id/iv_recommend_date_time"
-        android:text="일"
-        android:textColor="@color/text_color"
-        android:textSize="16sp" />
-
-    <TextView
-        android:id="@+id/tv_recommend_hr"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="11"
-        app:layout_constraintTop_toTopOf="@id/iv_recommend_date_time"
-        app:layout_constraintBottom_toBottomOf="@id/iv_recommend_date_time"
-        app:layout_constraintStart_toEndOf="@id/tv_recommend_day"
+        app:layout_constraintStart_toEndOf="@id/tv_recommend_start_date"
+        app:layout_constraintTop_toTopOf="@id/tv_recommend_start_date"
+        app:layout_constraintBottom_toBottomOf="@id/tv_recommend_start_date"
         android:layout_marginStart="8dp"
-        android:textSize="16sp"
-        android:textColor="@color/text_color" />
+        android:text="~"
+        android:textColor="@color/text_color"
+        android:textSize="16sp" />
 
     <TextView
-        android:id="@+id/tv_recommend_sep"
+        android:id="@+id/tv_recommend_end_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text=":"
-        app:layout_constraintTop_toTopOf="@id/tv_recommend_hr"
-        app:layout_constraintStart_toEndOf="@id/tv_recommend_hr"
-        app:layout_constraintBottom_toBottomOf="@id/tv_recommend_hr"
-        android:layout_marginStart="4dp"
-        android:textSize="16sp"
-        android:textColor="@color/text_color" />
+        app:layout_constraintTop_toBottomOf="@id/tv_recommend_start_date"
+        app:layout_constraintStart_toStartOf="@id/tv_recommend_start_date"
+        tools:text="2022. 01. 10"
+        android:textColor="@color/text_color"
+        android:textSize="14sp"/>
+
+    <ImageView
+        android:id="@+id/iv_recommend_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_clock"
+        app:tint="@color/sharehands_green_medium"
+        app:layout_constraintTop_toBottomOf="@id/tv_recommend_end_date"
+        app:layout_constraintStart_toStartOf="@id/tv_recommend_title"
+        android:layout_marginTop="6dp"
+        />
 
     <TextView
-        android:id="@+id/tv_recommend_min"
+        android:id="@+id/tv_recommend_weekday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="30"
-        app:layout_constraintTop_toTopOf="@id/tv_recommend_hr"
-        app:layout_constraintStart_toEndOf="@id/tv_recommend_sep"
-        app:layout_constraintBottom_toBottomOf="@id/tv_recommend_hr"
-        android:layout_marginStart="4dp"
-        android:textSize="16sp"
-        android:textColor="@color/text_color" />
+        app:layout_constraintTop_toTopOf="@id/iv_recommend_time"
+        app:layout_constraintStart_toStartOf="@id/tv_recommend_start_date"
+        android:textSize="14sp"
+        android:textColor="@color/text_color"
+        tools:text="금요일"
+        />
+
+    <TextView
+        android:id="@+id/tv_start_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/tv_recommend_weekday"
+        app:layout_constraintStart_toStartOf="@id/tv_recommend_weekday"
+        tools:text="15:00"
+        android:textColor="@color/text_color"
+        android:textSize="14sp"/>
+
+    <TextView
+        android:id="@+id/tv_sep"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/tv_start_time"
+        app:layout_constraintTop_toTopOf="@id/tv_start_time"
+        app:layout_constraintBottom_toBottomOf="@id/tv_start_time"
+        android:layout_marginStart="2dp"
+        android:text="~"
+        android:textColor="@color/text_color"
+        android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/tv_end_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/tv_recommend_weekday"
+        app:layout_constraintStart_toEndOf="@id/tv_sep"
+        android:layout_marginStart="2dp"
+        tools:text="15:00"
+        android:textColor="@color/text_color"
+        android:textSize="14sp"/>
 
     <ImageView
         android:id="@+id/iv_recommend_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_location"
-        app:layout_constraintTop_toBottomOf="@id/iv_recommend_date_time"
-        app:layout_constraintStart_toStartOf="@id/iv_recommend_date_time"
-        android:layout_marginTop="8dp"/>
+        app:tint="@color/sharehands_green_medium"
+        app:layout_constraintTop_toBottomOf="@id/tv_start_time"
+        app:layout_constraintStart_toStartOf="@id/iv_recommend_time"
+        android:layout_marginTop="6dp"/>
 
     <TextView
         android:id="@+id/tv_recommend_location"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@id/iv_recommend_location"
         app:layout_constraintTop_toTopOf="@id/iv_recommend_location"
         app:layout_constraintBottom_toBottomOf="@id/iv_recommend_location"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="32dp"
         android:layout_marginStart="8dp"
         tools:text="한국외국어대학교"
-        android:textSize="16sp"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:textSize="14sp"
         android:textColor="@color/text_color"/>
 
     <View
